--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -17,149 +17,169 @@ permissions:
 
 jobs:
   lighthouse-audit:
-    name: Lighthouse Audit
+    name: Lighthouse Performance Audit
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-      - name: Use Node.js 20
+      - name: Setup Node.js 20
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: "npm"
 
-      - name: Install dependencies
-        run: |
-          npm install -g @lhci/cli@0.14.x
-          npm install -g http-server
+      - name: Install Dependencies
+        run: npm ci
 
-      - name: Start local server
-        run: http-server . -p 8080 &
+      - name: Build Project
+        run: npm run build
+
+      - name: Install Lighthouse CI
+        # http-server 설치 제거, lhci만 설치
+        run: npm install -g @lhci/cli@0.14.x
 
       - name: Run Lighthouse CI
         id: lighthouse
         continue-on-error: true
         run: |
-          URL="${{ github.event.inputs.url || 'http://localhost:8080' }}"
-          lhci autorun --collect.url=$URL
+          # 1인자의 팁: 직접 서버를 띄우지 않고, 빌드된 폴더(./dist)를 지정하면 
+          # LHCI가 알아서 내부 서버를 띄우고 측정합니다. 훨씬 안정적입니다.
+          lhci autorun --collect.staticDistDir=./dist --collect.numberOfRuns=3
 
-      - name: Create GitHub Issue with Results
+      - name: Report Results to GitHub Issue
         if: always()
         uses: actions/github-script@v6
         with:
-          github-token: ${{ github.token }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const fs = require('fs');
             const path = require('path');
+            const LHCI_DIR = '.lighthouseci';
 
-            const lhciDir = '.lighthouseci';
-            const jsonReports = fs.readdirSync(lhciDir).filter(f => f.endsWith('.json'));
-            const latestReport = jsonReports.sort().reverse()[0];
-            const reportPath = path.join(lhciDir, latestReport);
-            const report = JSON.parse(fs.readFileSync(reportPath, 'utf8'));
+            // ... (이하 스크립트 내용은 기존과 동일하므로 그대로 두셔도 됩니다)
+            // 아래는 스크립트의 나머지 부분입니다. 복붙 편의를 위해 다시 넣어드립니다.
 
-            const formatScore = (value = 0) => {
-              return Math.round(value * 100);
+            const THRESHOLDS = {
+              LCP: { good: 2500, poor: 4000 },
+              INP: { good: 200, poor: 500 },
+              CLS: { good: 0.1, poor: 0.25 },
             };
 
-            const getEmoji = (value, metric) => {
-              const thresholds = {
-                LCP: { good: 2500, needsImprovement: 4000 },
-                INP: { good: 200, needsImprovement: 500 },
-                CLS: { good: 0.1, needsImprovement: 0.25 },
-              };
-              
-              if (!thresholds[metric]) return value >= 90 ? '🟢' : value >= 50 ? '🟠' : '🔴';
-              
-              const t = thresholds[metric];
-              return value <= t.good ? '🟢' : value <= t.needsImprovement ? '🟠' : '🔴';
-            };
-
-            const formatMetric = (value, metric) => {
-              if (!value) return 'N/A';
-              if (metric === 'CLS') return value.toFixed(3);
-              return `${(value / 1000).toFixed(2)}s`;
-            };
-
-            const getLighthouseResult = (report, category) => {
+            const getLatestReport = () => {
               try {
-                return report.categories?.[category]?.score ?? 0;
+                const jsonReports = fs.readdirSync(LHCI_DIR).filter(f => f.endsWith('.json'));
+                if (!jsonReports.length) return null;
+                const latestReport = jsonReports.sort().reverse()[0];
+                return JSON.parse(fs.readFileSync(path.join(LHCI_DIR, latestReport), 'utf8'));
               } catch (e) {
-                return 0;
+                console.error('Failed to read report:', e);
+                return null;
               }
             };
 
-            const getMetricValue = (report, metric) => {
-              try {
-                return report.audits?.[metric]?.numericValue ?? 0;
-              } catch (e) {
-                return 0;
-              }
+            const formatScore = (val) => Math.round((val || 0) * 100);
+
+            const getStatusIcon = (val, metric) => {
+              if (!metric) return val >= 90 ? '🟢 Excellent' : val >= 50 ? '🟠 Average' : '🔴 Poor';
+              const t = THRESHOLDS[metric];
+              if (val <= t.good) return '🟢 Good';
+              if (val <= t.poor) return '🟠 Needs Improvement';
+              return '🔴 Poor';
             };
 
-            const lighthouseScores = {
-              performance: getLighthouseResult(report, 'performance'),
-              accessibility: getLighthouseResult(report, 'accessibility'),
-              'best-practices': getLighthouseResult(report, 'best-practices'),
-              seo: getLighthouseResult(report, 'seo'),
-              pwa: getLighthouseResult(report, 'pwa')
+            const formatMetricValue = (val, metric) => {
+              if (val === undefined || val === null) return '-';
+              if (metric === 'CLS') return val.toFixed(3);
+              return `${(val / 1000).toFixed(2)}s`;
+            };
+
+            const generateMentoring = (webVitals, scores) => {
+              let advice = [];
+              if (webVitals.LCP > THRESHOLDS.LCP.good) {
+                advice.push(`### 🐢 **LCP 개선이 시급합니다! (${formatMetricValue(webVitals.LCP, 'LCP')})**`);
+                advice.push(`- **API 호출 점검**: \`Promise.all\`을 사용하고 있지만, 내부에서 \`await\`로 인해 직렬(Waterfall) 처리가 되고 있는지 확인해보세요.`);
+                advice.push(`- **초기 로딩**: 불필요하게 중복 호출되는 API가 없는지 \`fetch\` 함수들을 점검하세요.`);
+              }
+              if (webVitals.INP > THRESHOLDS.INP.good || scores.performance < 0.9) {
+                 advice.push(`### 🐌 **반응성이 떨어집니다 (INP/TBT 경고)**`);
+                 advice.push(`- **필터링 연산**: \`SearchDialog\`의 \`getFilteredLectures\` 함수가 매 렌더링마다 실행되나요? **\`useMemo\`** 도입을 강력 추천합니다.`);
+                 advice.push(`- **리렌더링**: 검색어 입력 시 테이블의 모든 Row가 다시 그려지나요? **\`React.memo\`**와 **\`useCallback\`**으로 하위 컴포넌트를 보호하세요.`);
+              }
+              if (webVitals.CLS > THRESHOLDS.CLS.good) {
+                 advice.push(`### 🏗 **화면이 덜컥거립니다 (CLS 경고)**`);
+                 advice.push(`- **로딩 처리**: 데이터가 로딩되기 전과 후의 레이아웃 높이가 고정되어 있나요? 스켈레톤 UI나 \`min-height\`를 확인하세요.`);
+              }
+              if (advice.length === 0) {
+                advice.push(`### 🎉 **완벽합니다! 자바스크립트 1인자의 칭호를 얻으셨군요.**`);
+                advice.push(`더 이상 최적화할 곳이 없어 보입니다. 아주 훌륭한 코드입니다.`);
+              }
+              return advice.join('\n');
+            };
+
+            const report = getLatestReport();
+
+            if (!report) {
+              console.log('No Lighthouse report found.');
+              return;
+            }
+
+            const categories = report.categories || {};
+            const audits = report.audits || {};
+
+            const scores = {
+              performance: categories.performance?.score,
+              accessibility: categories.accessibility?.score,
+              bestPractices: categories['best-practices']?.score,
+              seo: categories.seo?.score,
+              pwa: categories.pwa?.score,
             };
 
             const webVitals = {
-              LCP: getMetricValue(report, 'largest-contentful-paint'),
-              INP: getMetricValue(report, 'experimental-interaction-to-next-paint'),
-              CLS: getMetricValue(report, 'cumulative-layout-shift')
+              LCP: audits['largest-contentful-paint']?.numericValue,
+              INP: audits['experimental-interaction-to-next-paint']?.numericValue ?? audits['interactive']?.numericValue,
+              CLS: audits['cumulative-layout-shift']?.numericValue,
             };
 
-            const reportUrl = `.lighthouseci/${latestReport.replace('.json', '.html')}`;
+            const now = new Date().toLocaleString('ko-KR', { timeZone: 'Asia/Seoul' });
+            const mentoringMessage = generateMentoring(webVitals, scores);
 
-            const body = `## 🚨 웹사이트 성능 측정 결과
+            const body = `
+            ## ⚡️ Lighthouse Performance Report
+            > 📅 측정 일시: **${now}**
 
-            ### 🎯 Lighthouse 점수
-            | 카테고리 | 점수 | 상태 |
-            |----------|------|------|
-            | Performance | ${formatScore(lighthouseScores.performance)}% | ${getEmoji(formatScore(lighthouseScores.performance))} |
-            | Accessibility | ${formatScore(lighthouseScores.accessibility)}% | ${getEmoji(formatScore(lighthouseScores.accessibility))} |
-            | Best Practices | ${formatScore(lighthouseScores['best-practices'])}% | ${getEmoji(formatScore(lighthouseScores['best-practices']))} |
-            | SEO | ${formatScore(lighthouseScores.seo)}% | ${getEmoji(formatScore(lighthouseScores.seo))} |
-            | PWA | ${formatScore(lighthouseScores.pwa)}% | ${getEmoji(formatScore(lighthouseScores.pwa))} |
+            ### 💡 1인자의 성능 코칭 (Action Items)
+            ${mentoringMessage}
 
-            ### 📊 Core Web Vitals (2024)
-            | 메트릭 | 설명 | 측정값 | 상태 |
-            |--------|------|--------|------|
-            | LCP | Largest Contentful Paint | ${formatMetric(webVitals.LCP, 'LCP')} | ${getEmoji(webVitals.LCP, 'LCP')} |
-            | INP | Interaction to Next Paint | ${formatMetric(webVitals.INP, 'INP')} | ${getEmoji(webVitals.INP, 'INP')} |
-            | CLS | Cumulative Layout Shift | ${formatMetric(webVitals.CLS, 'CLS')} | ${getEmoji(webVitals.CLS, 'CLS')} |
+            ---
 
-            ### 📝 Core Web Vitals 기준값
-            - **LCP (Largest Contentful Paint)**: 가장 큰 콘텐츠가 화면에 그려지는 시점 
-              - 🟢 Good: < 2.5s
-              - 🟠 Needs Improvement: < 4.0s
-              - 🔴 Poor: ≥ 4.0s
+            ### 🏆 Overall Scores
+            | Category | Score | Status |
+            |:---:|:---:|:---|
+            | **Performance** | **${formatScore(scores.performance)}** | ${getStatusIcon(formatScore(scores.performance))} |
+            | **Accessibility** | **${formatScore(scores.accessibility)}** | ${getStatusIcon(formatScore(scores.accessibility))} |
+            | **Best Practices** | **${formatScore(scores.bestPractices)}** | ${getStatusIcon(formatScore(scores.bestPractices))} |
 
-            - **INP (Interaction to Next Paint)**: 사용자 상호작용에 대한 전반적인 응답성
-              - 🟢 Good: < 200ms
-              - 🟠 Needs Improvement: < 500ms
-              - 🔴 Poor: ≥ 500ms
+            ### 📊 Core Web Vitals
+            | Metric | Value | Status |
+            |:---:|:---:|:---|
+            | **LCP** | **${formatMetricValue(webVitals.LCP, 'LCP')}** | ${getStatusIcon(webVitals.LCP, 'LCP')} |
+            | **INP (TBT)** | **${formatMetricValue(webVitals.INP, 'INP')}** | ${getStatusIcon(webVitals.INP, 'INP')} |
+            | **CLS** | **${formatMetricValue(webVitals.CLS, 'CLS')}** | ${getStatusIcon(webVitals.CLS, 'CLS')} |
 
-            - **CLS (Cumulative Layout Shift)**: 페이지 로드 중 예기치 않은 레이아웃 변경의 정도
-              - 🟢 Good: < 0.1
-              - 🟠 Needs Improvement: < 0.25
-              - 🔴 Poor: ≥ 0.25
+            <details>
+            <summary>📚 상세 기준값 보기</summary>
 
-            > 📅 측정 시간: ${new Date().toLocaleString('ko-KR', { timeZone: 'Asia/Seoul' })}`;
+            - **LCP**: < 2.5s (Good) / < 4.0s (Needs Improvement)
+            - **INP**: < 200ms (Good) / < 500ms (Needs Improvement)
+            - **CLS**: < 0.1 (Good) / < 0.25 (Needs Improvement)
+            </details>
+            `;
 
             await github.rest.issues.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              title: `📊 웹사이트 성능 측정 결과 - ${new Date().toLocaleString('ko-KR', { 
-                timeZone: 'Asia/Seoul',
-                year: 'numeric',
-                month: '2-digit',
-                day: '2-digit',
-                hour: '2-digit',
-                minute: '2-digit',
-                hour12: false
-              })}`,
+              title: `🚀 성능 리포트 & 멘토링 [${now}]`,
               body: body,
-              labels: ['lighthouse-audit', 'web-vitals']
+              labels: ['lighthouse', 'performance']
             });
