--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -23,28 +23,34 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      # 1. pnpm 설치 (추가됨)
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
       - name: Setup Node.js 20
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "npm"
+          cache: "pnpm" # 2. 캐시 설정을 pnpm으로 변경
 
+      # 3. pnpm으로 의존성 설치
       - name: Install Dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
+      # 4. pnpm으로 빌드
       - name: Build Project
-        run: npm run build
+        run: pnpm run build
 
       - name: Install Lighthouse CI
-        # http-server 설치 제거, lhci만 설치
         run: npm install -g @lhci/cli@0.14.x
 
       - name: Run Lighthouse CI
         id: lighthouse
         continue-on-error: true
         run: |
-          # 1인자의 팁: 직접 서버를 띄우지 않고, 빌드된 폴더(./dist)를 지정하면 
-          # LHCI가 알아서 내부 서버를 띄우고 측정합니다. 훨씬 안정적입니다.
+          # pnpm 빌드 결과물(dist)을 측정
           lhci autorun --collect.staticDistDir=./dist --collect.numberOfRuns=3
 
       - name: Report Results to GitHub Issue
@@ -55,11 +61,9 @@ jobs:
           script: |
             const fs = require('fs');
             const path = require('path');
+
+            // --- 아래 스크립트 내용은 기존과 동일합니다 ---
             const LHCI_DIR = '.lighthouseci';
-
-            // ... (이하 스크립트 내용은 기존과 동일하므로 그대로 두셔도 됩니다)
-            // 아래는 스크립트의 나머지 부분입니다. 복붙 편의를 위해 다시 넣어드립니다.
-
             const THRESHOLDS = {
               LCP: { good: 2500, poor: 4000 },
               INP: { good: 200, poor: 500 },
