perf: 검색 리스트 가상화(Virtual Scroll) 도입 및 렌더링 최적화
- 기존 무한 스크롤(IntersectionObserver)을 제거하고 @tanstack/react-virtual 도입
- 4,000건 데이터 렌더링 시 DOM 노드 폭발(28,000개 이상) 문제 해결 -> 뷰포트 내 20개만 렌더링
- Table 레이아웃 깨짐 방지를 위해 Tr에 Flexbox 및 align-items: stretch 적용
- 데이터 null 처리(Nullish Coalescing) 추가로 렌더링 안정성 확보

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -157,7 +157,7 @@ jobs:
             |:---:|:---:|:---|
             | **Performance** | **${formatScore(scores.performance)}** | ${getStatusIcon(formatScore(scores.performance))} |
             | **Accessibility** | **${formatScore(scores.accessibility)}** | ${getStatusIcon(formatScore(scores.accessibility))} |
-
+            | **Best Practices** | **${formatScore(scores.bestPractices)}** | ${getStatusIcon(formatScore(scores.bestPractices))} |
             ### Core Web Vitals
             | 지표 | 측정값 | 상태 |
             |:---:|:---:|:---|
